--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
   "arrowParens": "always",
-  "bracketSpacing": false,
-  "printWidth": 100
+  "bracketSpacing": true,
+  "printWidth": 80,
+  "singleAttributePerLine": true
 }
