--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server --watch db.json"
   },
   "dependencies": {
     "@tanstack/react-query": "^4.24.9",
@@ -14,6 +15,7 @@
     "axios": "^1.3.3",
     "fp-ts": "^2.13.1",
     "io-ts": "^2.2.20",
+    "json-server": "^0.17.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
