--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "json-server": "^0.17.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
