--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,10 @@
 {
-  "arrowParens": "always",
-  "bracketSpacing": false,
-  "printWidth": 90
+  "bracketSpacing": true,
+  "singleQuote": true,
+  "trailingComma": "all",
+  "tabWidth": 2,
+  "semi": false,
+  "printWidth": 120,
+  "jsxSingleQuote": true,
+  "endOfLine": "auto"
 }
