--- a/package.json
+++ b/package.json
@@ -1,32 +1,61 @@
 {
   "name": "axios-query",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "Composition of React query and Axios, the simple and powerful API call",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/esm/index.d.ts",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "server": "json-server --watch db.json"
+    "build": "yarn build:esm && yarn build:cjs",
+    "build:esm": "tsc",
+    "build:cjs": "tsc --module commonjs --outDir dist/cjs",
+    "lint": "eslint \"{**/*,*}.{js,ts,jsx,tsx}\"",
+    "format": "prettier --write \"{src,tests,example/src}/**/*.{js,ts,jsx,tsx}\""
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ierfaaan/axios-query.git"
+  },
+  "keywords": [
+    "axios",
+    "tanstack",
+    "react-query",
+    "tanstack-query"
+  ],
+  "author": "Erfan Abbasi",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/ierfaaan/axios-query/issues"
+  },
+  "homepage": "https://github.com/ierfaaan/axios-query#readme",
   "dependencies": {
-    "@tanstack/react-query": "^4.24.9",
-    "@tanstack/react-query-devtools": "^4.24.10",
-    "axios": "^1.3.3",
-    "fp-ts": "^2.13.1",
-    "io-ts": "^2.2.20",
-    "json-server": "^0.17.2",
-    "lodash": "^4.17.21",
+    "@tanstack/react-query": "^4.28.0",
+    "@tanstack/react-query-devtools": "^4.28.0",
+    "axios": "^1.3.4",
+    "lodash": "^4.17.21"
+  },
+  "peerDependencies": {
+    "react": ">=16"
+  },
+  "files": [
+    "dist",
+    "LICENSE",
+    "README.md"
+  ],
+  "devDependencies": {
+    "@types/lodash": "^4.14.192",
+    "@types/react": "^18.0.31",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.8.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-toastify": "^9.1.1"
-  },
-  "devDependencies": {
-    "@types/lodash": "^4.14.191",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react-swc": "^3.0.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "tslib": "^2.5.0",
+    "typescript": "^5.0.3"
   }
 }
