--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build": "yarn build:esm && yarn build:cjs",
     "build:esm": "tsc",
     "build:cjs": "tsc --module commonjs --outDir dist/cjs",
+    "prepublishOnly": "npm run prettier && npm run lint",
+    "prepare": "npm run build",
     "lint": "eslint \"{**/*,*}.{js,ts,jsx,tsx}\"",
     "format": "prettier --write \"{src,tests,example/src}/**/*.{js,ts,jsx,tsx}\""
   },
