--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "prepare": "npm run build",
     "lint": "eslint \"{**/*,*}.{js,ts,jsx,tsx}\"",
     "prettier": "prettier --write \"{src,tests,example/src}/**/*.{js,ts,jsx,tsx}\"",
-    "prepublishOnly": "npm run prettier && npm run lint"
+    "prepublishOnly": "npm run prettier && npm run lint",
+    "release": "release-it"
   },
   "repository": {
     "type": "git",
@@ -57,6 +58,7 @@
     "prettier": "^2.8.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "release-it": "^15.10.0",
     "tslib": "^2.5.0",
     "typescript": "^5.0.3"
   }
