--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rest-hook",
-  "version": "0.2.2",
+  "version": "0.2.1",
   "description": "Composition of React query and Axios, the simple and powerful API call",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
@@ -16,7 +16,13 @@
     "release": "release-it"
   },
   "exports": {
-    ".": "./index.ts"
+    ".": {
+      "default": {
+        "require": "./dist/esm/index.js",
+        "default": "./index.js"
+      }
+    },
+    "./package.json": "./package.json"
   },
   "repository": {
     "type": "git",
