--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "rest-hook": "^0.2.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
