--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
       "default": {
         "require": "./dist/esm/index.js",
         "default": "./index.js"
+      },
+      "types": {
+        "require": "./dist/esm/index.d.ts",
+        "default": "./index.d.ts"
       }
     },
     "./package.json": "./package.json"
