--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "rest-hook",
   "version": "0.2.6",
   "description": "Composition of React query and Axios, the simple and powerful API call",
-  "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/esm/index.d.ts",
+  "main": "dist/esm/index.js",
   "scripts": {
     "build": "yarn build:esm && yarn build:cjs",
     "build:esm": "tsc",
