--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "module": "./dist/esm/index.js",
   "types": "./dist/esm/index.d.ts",
   "main": "dist/esm/index.js",
+  "exports": "./dist/esm/index.js",
   "scripts": {
     "build": "yarn build:esm && yarn build:cjs",
     "build:esm": "tsc",
