--- a/package.json
+++ b/package.json
@@ -2,15 +2,10 @@
   "name": "rest-hook",
   "version": "0.2.8",
   "description": "Composition of React query and Axios, the simple and powerful API call",
-  "module": "./dist/esm/index.js",
-  "types": "./dist/esm/index.d.ts",
-  "main": "dist/esm/index.js",
-  "exports": "./dist/esm/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "scripts": {
-    "build": "yarn build:esm && yarn build:cjs",
-    "build:esm": "tsc",
-    "build:cjs": "tsc --module commonjs --outDir dist/cjs",
-    "prepare": "npm run build",
+    "build": "tsup src/index.ts --format esm,cjs --legacy-output",
     "lint": "eslint \"{**/*,*}.{js,ts,jsx,tsx}\"",
     "prettier": "prettier --write \"{src,tests,example/src}/**/*.{js,ts,jsx,tsx}\"",
     "prepublishOnly": "npm run prettier && npm run lint",
@@ -48,6 +43,7 @@
   ],
   "devDependencies": {
     "@types/lodash": "^4.14.192",
+    "@types/node": "^18.15.11",
     "@types/react": "^18.0.31",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
@@ -61,6 +57,7 @@
     "react-dom": "^18.2.0",
     "release-it": "^15.10.0",
     "tslib": "^2.5.0",
+    "tsup": "^6.7.0",
     "typescript": "^5.0.3"
   }
 }
