--- a/package.json
+++ b/package.json
@@ -1,48 +1,26 @@
 {
-  "name": "rest-hook",
-  "version": "0.5.0",
-  "description": "Composition of React query and Axios, the simple and powerful API call",
-  "main": "dist/index.js",
-  "module": "dist/esm/index.js",
-  "typings": "dist/index.d.ts",
+  "version": "1.0.0",
+  "private": true,
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "build": "tsup src/index.ts --format esm,cjs --legacy-output",
-    "lint": "eslint \"{**/*,*}.{js,ts,jsx,tsx}\"",
-    "prettier": "prettier --write \"{src,tests,example/src}/**/*.{js,ts,jsx,tsx}\"",
-    "prepublishOnly": "npm run prettier && npm run lint",
-    "release": "release-it"
+    "dev": "npx lerna run dev --parallel",
+    "build": "npx lerna run build --scope=rest-hook",
+    "lint": "eslint \"{packages,example/src}/**/*.{js,ts,jsx,tsx}\"",
+    "prettier": "prettier --write \"{packages,example/src}/**/*.{js,ts,jsx,tsx}\"",
+    "prepublishOnly": "npx lerna run prepublishOnly --parallel",
+    "release": "npx lerna run release --scope=rest-hook"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ierfaaan/rest-hook.git"
-  },
-  "keywords": [
-    "axios",
-    "tanstack",
-    "react-query",
-    "tanstack-query"
-  ],
-  "author": "Erfan Abbasi",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/ierfaaan/rest-hook/issues"
-  },
-  "homepage": "https://github.com/ierfaaan/rest-hook#readme",
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "@tanstack/react-query": "^4.28.0",
     "@tanstack/react-query-devtools": "^4.28.0",
     "axios": "^1.3.4",
     "lodash": "^4.17.21"
   },
-  "peerDependencies": {
-    "react": ">=16"
-  },
-  "files": [
-    "dist",
-    "LICENSE",
-    "README.md"
-  ],
   "devDependencies": {
+    "lerna": "^6.6.1",
     "@types/lodash": "^4.14.192",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.31",
@@ -53,7 +31,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "lerna": "^6.6.1",
     "prettier": "^2.8.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -61,5 +38,9 @@
     "tslib": "^2.5.0",
     "tsup": "^6.7.0",
     "typescript": "^5.0.3"
-  }
+  },
+  "workspaces": [
+    "./packages/*",
+    "./example"
+  ]
 }
