--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
 node_modules
-yarn.lock
 dist
-yarn-error.log
-example/dist
-example/node_modules
+#
+.idea
+# testing
+/coverage
+# misc
+.DS_Store
+*.pem
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+#
+yarn.lock
+package-lock.json
