--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src"],
+  "include": ["package"],
   "exclude": ["dist", "node_modules"],
   "compilerOptions": {
     "module": "esnext",
@@ -7,7 +7,7 @@
     "importHelpers": true,
     "declaration": true,
     "sourceMap": true,
-    "rootDir": "./src",
+    "rootDir": "./package",
     "outDir": "./dist/esm",
     "strict": true,
     "noImplicitReturns": true,
