--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "axios-query",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Composition of React query and Axios, the simple and powerful API call",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -13,7 +13,7 @@
     "dev:exam": "cd ./example && npm run dev",
     "dev:package": "npm run build -- --watch",
     "dev": "concurrently npm:dev:*",
-    "publish": "npm run build && release-it"
+    "release": "npm run build && release-it"
   },
   "repository": {
     "type": "git",
