--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "axios-query",
+  "name": "react-courier",
   "version": "0.0.0",
   "description": "Composition of React query and Axios, the simple and powerful API call",
   "main": "dist/index.js",
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ierfaaan/rest-hook.git"
+    "url": "git+https://github.com/ierfaaan/react-courier.git"
   },
   "keywords": [
     "axios",
@@ -28,9 +28,9 @@
   "author": "Erfan Abbasi",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ierfaaan/rest-hook/issues"
+    "url": "https://github.com/ierfaaan/react-courier/issues"
   },
-  "homepage": "https://github.com/ierfaaan/rest-hook#readme",
+  "homepage": "https://github.com/ierfaaan/react-courier#readme",
   "dependencies": {
     "@tanstack/react-query": "^4.28.0",
     "@tanstack/react-query-devtools": "^4.28.0",
