--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@tanstack/react-query": "^4.28.0",
     "@tanstack/react-query-devtools": "^4.28.0",
     "axios": "^1.3.4",
-    "lodash": "^4.17.21"
+    "camelcase": "8.0.0"
   },
   "peerDependencies": {
     "react": ">=16"
@@ -46,7 +46,6 @@
     "README.md"
   ],
   "devDependencies": {
-    "@types/lodash": "^4.14.192",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.31",
     "@types/react-dom": "^18.0.11",
