--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -14,7 +14,9 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["../package/src/*"],
+      "react-courier": ["../package/index.ts"],
+      "react-courier/types": ["../package/types/index.ts"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
